<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:paddingTop="20dp"
    android:focusable="true"
    android:id="@+id/lay"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="Doctor Add Form"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:text="Doctor Name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:gravity="start|top"
                android:hint="@string/enter_your_name"
                android:inputType="textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck">


            </EditText>

            <TextView
                android:id="@+id/pr_roll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/poppins"
                android:text="Education"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:gravity="start|top"
                android:hint="@string/enter_your_education"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/crime_no_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/poppins"
                android:text="Experience"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"

                android:fontFamily="@font/poppins"
                android:gravity="start|top"
                android:hint="@string/_10_yr_experience"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/aount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:text="Checkup Charges"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:gravity="start|top"
                android:hint="@string/enter_checkup_charges"
                android:inputType="number"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck"/>


            <TextView
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:text="Location"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:gravity="start|top"
                android:hint="@string/enter_latitude_longitude"
                android:inputType="textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/ell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:text="Contact"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"

                android:maxLength="10"
                android:fontFamily="@font/poppins"
                android:gravity="start|top"
                android:hint="@string/enter_contact_number"
                android:inputType="number"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:text="About"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/describe"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:maxLength="200"
                android:fontFamily="@font/poppins"
                android:gravity="start|top"
                android:hint="@string/write_some_description"
                android:inputType="textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/submit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_card"
                android:backgroundTint="@color/orange_400"
                android:fontFamily="@font/poppins"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginBottom="30dp"
                android:text="@string/submit"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck"
                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
