<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/cardConstraintLayout"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/bg_card"
    android:padding="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/name">

        <ImageView
            android:id="@+id/location"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvAppointmentDate" />

        <TextView
            android:id="@+id/tvAppointmentDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="start"
            android:text="@string/bilaspur"
            android:fontFamily="@font/poppins_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/location"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/ivDoctorPhoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:padding="3dp"
            android:src="@drawable/ic_doctor_prof"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <TextView
            android:id="@+id/tvDoctorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivDoctorPhoto"
            app:layout_constraintTop_toTopOf="@+id/ivDoctorPhoto" />

        <TextView
            android:id="@+id/tvDoctorExperience"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvDoctorName"
            app:layout_constraintTop_toBottomOf="@+id/tvDoctorName" />

        <TextView
            android:id="@+id/doctorknow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/know_more"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvDoctorName"
            app:layout_constraintTop_toBottomOf="@+id/tvDoctorExperience"
            app:drawableRightCompat="@drawable/ic_forward" />


        <Button
            android:id="@+id/btnMakeVisit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_semibold"
            android:backgroundTint="@color/orange_400"
            android:text="@string/make_a_visit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDoctorPhoto" />
</androidx.constraintlayout.widget.ConstraintLayout>